Prune config file

--- a/data/monado/d455.toml
+++ b/data/monado/d455.toml
@@ -6,12 +6,6 @@ show-gui=1
 # Ground-truth camera calibration used for simulation.
 cam-calib="/home/mateo/Documents/apps/bsltdeps/basalt/data/d455_ds_calib.json"
 
-# Path to dataset.
-dataset-path="/home/mateo/Documents/apps/euroc/2_mateosss_20210924_640x360_30fps_stereo_acc250_gyr200/"
-
-# Dataset type <euroc, bag>.
-dataset-type="euroc"
-
 # Path to config file.
 config-path="/home/mateo/Documents/apps/bsltdeps/basalt/data/euroc_config.json"
 
@@ -21,17 +15,5 @@ marg-data=""
 # Poll and print for queue sizes.
 print-queue=0
 
-# Path to result file where the system will write RMSE ATE.
-result-path=""
-
-# Number of threads.
-num-threads=0
-
-# Manual playback.
-step-by-step=0
-
-# Save trajectory if not empty. Supported formats <tum, euroc, kitti>
-save-trajectory=""
-
-# Use IMU.
-use-imu=1
+# 0 for returning every tracked pose in order, 1 (default) for just the latest
+latest-pose = 1
