--- a/.gitmodules
+++ b/.gitmodules
@@ -19,7 +19,8 @@
 	url = https://github.com/ros/console_bridge.git
 [submodule "thirdparty/basalt-headers"]
 	path = thirdparty/basalt-headers
-	url = https://gitlab.com/VladyslavUsenko/basalt-headers.git
+#	url = https://gitlab.com/VladyslavUsenko/basalt-headers.git
+	url = https://gitlab.freedesktop.org/mateosss/basalt-headers.git
 [submodule "thirdparty/magic_enum"]
 	path = thirdparty/magic_enum
 	url = https://github.com/Neargye/magic_enum.git
