Update submodules to point to own fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,5 @@
 	url = https://github.com/ros/console_bridge.git
 [submodule "thirdparty/basalt-headers"]
 	path = thirdparty/basalt-headers
-	url = https://gitlab.com/VladyslavUsenko/basalt-headers.git
+	#url = https://gitlab.com/VladyslavUsenko/basalt-headers.git
+	url = https://gitlab.freedesktop.org/mateosss/basalt-headers.git
