--- a/data/euroc_config.json
+++ b/data/euroc_config.json
@@ -11,7 +11,7 @@
         "config.vio_linearization_type": "ABS_QR",
         "config.vio_sqrt_marg": true,
         "config.vio_max_states": 3,
-        "config.vio_max_kfs": 7,
+        "config.vio_max_kfs": 8,
         "config.vio_min_frames_after_kf": 5,
         "config.vio_new_kf_keypoints_thresh": 0.7,
         "config.vio_debug": false,
@@ -33,7 +33,7 @@
         "config.vio_init_pose_weight": 1e8,
         "config.vio_init_ba_weight": 1e1,
         "config.vio_init_bg_weight": 1e2,
-        "config.vio_marg_lost_landmarks": true,
+        "config.vio_marg_lost_landmarks": false,
         "config.vio_kf_marg_feature_ratio": 0.1,
         "config.mapper_obs_std_dev": 0.25,
         "config.mapper_obs_huber_thresh": 1.5,
