--- a/data/hilti_config.json
+++ b/data/hilti_config.json
@@ -14,6 +14,7 @@
         "config.optical_flow_skip_frames": 1,
         "config.optical_flow_matching_guess_type": "REPROJ_AVG_DEPTH",
         "config.optical_flow_matching_default_depth": 2.0,
+        "config.recall_detection_num_points_cell": 10,
         "config.vio_linearization_type": "ABS_QR",
         "config.vio_sqrt_marg": true,
         "config.vio_max_states": 3,
