--- a/data/iccv21/basalt_batch_config.toml
+++ b/data/iccv21/basalt_batch_config.toml
@@ -21,6 +21,7 @@
 "config.optical_flow_skip_frames" = 1
 "config.optical_flow_matching_guess_type" = "SAME_PIXEL"
 "config.optical_flow_matching_default_depth" = 2.0
+"config.recall_detection_num_points_cell" = 10
 
 "config.vio_linearization_type" = "ABS_QR"
 "config.vio_sqrt_marg" = true
