--- a/data/euroc_config_wrecall.json
+++ b/data/euroc_config_wrecall.json
@@ -1,18 +1,18 @@
 {
     "value0": {
         "config.optical_flow_type": "frame_to_frame",
-        "config.optical_flow_detection_grid_size": 50,
+        "config.optical_flow_detection_grid_size": 320,
         "config.optical_flow_detection_num_points_cell": 1,
         "config.optical_flow_detection_min_threshold": 5,
         "config.optical_flow_detection_max_threshold": 40,
-        "config.optical_flow_detection_nonoverlap": false,
+        "config.optical_flow_detection_nonoverlap": true,
         "config.optical_flow_max_recovered_dist2": 0.04,
         "config.optical_flow_pattern": 51,
         "config.optical_flow_max_iterations": 5,
         "config.optical_flow_epipolar_error": 0.005,
         "config.optical_flow_levels": 3,
         "config.optical_flow_skip_frames": 1,
-        "config.optical_flow_matching_guess_type": "SAME_PIXEL",
+        "config.optical_flow_matching_guess_type": "REPROJ_AVG_DEPTH",
         "config.optical_flow_matching_default_depth": 2.0,
         "config.optical_flow_enable_recall": true,
         "config.vio_linearization_type": "ABS_QR",
@@ -30,9 +30,9 @@
         "config.vio_filter_iteration": 4,
         "config.vio_max_iterations": 7,
         "config.vio_enforce_realtime": false,
-        "config.vio_use_lm": false,
-        "config.vio_lm_lambda_initial": 1e-8,
-        "config.vio_lm_lambda_min": 1e-32,
+        "config.vio_use_lm": true,
+        "config.vio_lm_lambda_initial": 1e-4,
+        "config.vio_lm_lambda_min": 1e-6,
         "config.vio_lm_lambda_max": 1e2,
         "config.vio_lm_landmark_damping_variant": 1,
         "config.vio_lm_pose_damping_variant": 1,
@@ -40,7 +40,7 @@
         "config.vio_init_pose_weight": 1e8,
         "config.vio_init_ba_weight": 1e1,
         "config.vio_init_bg_weight": 1e2,
-        "config.vio_marg_lost_landmarks": true,
+        "config.vio_marg_lost_landmarks": false,
         "config.vio_kf_marg_feature_ratio": 0.1,
         "config.mapper_obs_std_dev": 0.25,
         "config.mapper_obs_huber_thresh": 1.5,
@@ -54,7 +54,7 @@
         "config.mapper_second_best_test_ratio": 1.2,
         "config.mapper_bow_num_bits": 16,
         "config.mapper_min_triangulation_dist": 0.07,
-        "config.mapper_no_factor_weights": true,
+        "config.mapper_no_factor_weights": false,
         "config.mapper_use_factors": true,
         "config.mapper_use_lm": true,
         "config.mapper_lm_lambda_min": 1e-32,
