--- a/data/euroc_config.json
+++ b/data/euroc_config.json
@@ -14,6 +14,7 @@
         "config.optical_flow_skip_frames": 1,
         "config.optical_flow_matching_guess_type": "REPROJ_AVG_DEPTH",
         "config.optical_flow_matching_default_depth": 2.0,
+        "config.optical_flow_image_safe_radius": 0.0,
         "config.optical_flow_enable_recall": true,
         "config.vio_linearization_type": "ABS_QR",
         "config.vio_sqrt_marg": true,
