--- a/data/iccv21/basalt_batch_config.toml
+++ b/data/iccv21/basalt_batch_config.toml
@@ -23,6 +23,7 @@
 "config.optical_flow_matching_default_depth" = 2.0
 "config.optical_flow_image_safe_radius" = 0.0
 "config.optical_flow_recall_enable" = true
+"config.optical_flow_recall_all_cams" = true
 "config.optical_flow_recall_num_points_cell" = false
 "config.optical_flow_recall_over_tracking" = false
 "config.optical_flow_recall_update_patch_viewpoint" = false
