--- a/data/iccv21/basalt_batch_config.toml
+++ b/data/iccv21/basalt_batch_config.toml
@@ -56,6 +56,7 @@
 "config.vio_init_ba_weight" = 1e1
 "config.vio_init_bg_weight" = 1e2
 "config.vio_marg_lost_landmarks" = true
+"config.vio_fix_long_term_keyframes" = false
 "config.vio_kf_marg_feature_ratio" = 0.1
 "config.vio_kf_marg_criteria" = "KF_MARG_DEFAULT"
 
