--- a/data/kitti_config.json
+++ b/data/kitti_config.json
@@ -53,6 +53,7 @@
         "config.vio_init_ba_weight": 1e1,
         "config.vio_init_bg_weight": 1e2,
         "config.vio_marg_lost_landmarks": true,
+        "config.vio_fix_long_term_keyframes": false,
         "config.vio_kf_marg_feature_ratio": 0.1,
         "config.vio_kf_marg_criteria": "KF_MARG_DEFAULT",
         "config.mapper_obs_std_dev": 0.25,
