--- a/data/euroc_config.json
+++ b/data/euroc_config.json
@@ -1,7 +1,7 @@
 {
     "value0": {
         "config.optical_flow_type": "frame_to_frame",
-        "config.optical_flow_detection_grid_size": 50,
+        "config.optical_flow_detection_grid_size": 320,
         "config.optical_flow_detection_num_points_cell": 1,
         "config.optical_flow_detection_min_threshold": 5,
         "config.optical_flow_detection_max_threshold": 40,
@@ -15,9 +15,9 @@
         "config.optical_flow_matching_guess_type": "REPROJ_AVG_DEPTH",
         "config.optical_flow_matching_default_depth": 2.0,
         "config.optical_flow_image_safe_radius": 0.0,
-        "config.optical_flow_recall_enable": false,
-        "config.optical_flow_recall_all_cams": false,
-        "config.optical_flow_recall_num_points_cell": true,
+        "config.optical_flow_recall_enable": true,
+        "config.optical_flow_recall_all_cams": true,
+        "config.optical_flow_recall_num_points_cell": false,
         "config.optical_flow_recall_over_tracking": false,
         "config.optical_flow_recall_update_patch_viewpoint": false,
         "config.optical_flow_recall_max_patch_dist": 3,
@@ -52,8 +52,8 @@
         "config.vio_init_pose_weight": 1e8,
         "config.vio_init_ba_weight": 1e1,
         "config.vio_init_bg_weight": 1e2,
-        "config.vio_marg_lost_landmarks": true,
-        "config.vio_fix_long_term_keyframes": false,
+        "config.vio_marg_lost_landmarks": false,
+        "config.vio_fix_long_term_keyframes": true,
         "config.vio_kf_marg_feature_ratio": 0.1,
         "config.vio_kf_marg_criteria": "KF_MARG_DEFAULT",
         "config.mapper_obs_std_dev": 0.25,
