Move ui matrix info to a separate vis_matrices.h header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -356,6 +356,7 @@ target_sources(basalt_internal
     ${CMAKE_CURRENT_SOURCE_DIR}/include/basalt/utils/tracks.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/basalt/utils/union_find.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/basalt/utils/vio_config.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/basalt/utils/vis_matrices.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/basalt/utils/vis_utils.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/basalt/vi_estimator/ba_base.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/basalt/vi_estimator/landmark_database.h
