--- a/data/msdmi_config.json
+++ b/data/msdmi_config.json
@@ -1,7 +1,7 @@
 {
     "value0": {
         "config.optical_flow_type": "frame_to_frame",
-        "config.optical_flow_detection_grid_size": 50,
+        "config.optical_flow_detection_grid_size": 320,
         "config.optical_flow_detection_num_points_cell": 1,
         "config.optical_flow_detection_min_threshold": 5,
         "config.optical_flow_detection_max_threshold": 40,
@@ -52,7 +52,7 @@
         "config.vio_init_pose_weight": 1e8,
         "config.vio_init_ba_weight": 1e1,
         "config.vio_init_bg_weight": 1e2,
-        "config.vio_marg_lost_landmarks": true,
+        "config.vio_marg_lost_landmarks": false,
         "config.vio_kf_marg_feature_ratio": 0.1,
         "config.vio_kf_marg_criteria": "KF_MARG_DEFAULT",
         "config.mapper_obs_std_dev": 0.25,
