--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -48,6 +48,11 @@ jobs:
     - name: Clone repository
       run: |
         git clone --recursive https://gitlab.freedesktop.org/mateosss/basalt.git
+        
+    - name: Print Working Directory
+      run: |
+        pwd
+        ls -l
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
